--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/core_emr
+spring.data.mongodb.uri=mongodb://localhost:27017/coreEmr
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.username=root
 spring.data.mongodb.password=corevalue
-medTermsFilePath=D:\\Workspace\\CoreValue\\HMS\\wordlist-medicalterms-en-master\\wordlist.txt
-whoIcdFilePath=D:\\CoreValue\\Project Requirements\\Core HMS\\WHO\\supportfile_whoicddata.csv
